added get for a device by ID
