# lib/deviceDAO.js
@@ -74,19 +74,15 @@ dao.saveDeviceData = function(input) {
 }
 
 
-// dao.getDeviceData = function(deviceID, timestampGt, timestampLt) {
-//     return Schemas.RiverscoutSchema.find({
-//                 deviceID : deviceID,
-//                 "timestamp":{
-//                     $gt: timestampGt,
-//                     $lt: timestampLt
-//                 }
-//             })
-//     .then(function(data) {
-//         console.log(data)
-//         return Promise.resolve(data) ;
-//     });
-// }
+dao.getDeviceData = function(deviceID) {
+    return DeviceSchema.deviceSchema.find({
+                _id : deviceID
+            })
+    .then(function(data) {
+        console.log(data)
+        return Promise.resolve(data) ;
+    });
+}
 
 
 module.exports = dao;
